24.10.15 코드 최적화 작업 -> Entity: Setter - IpBlackList까지 진행 완료